@@ -8,19 +8,30 @@ echo "Updating translations via TP"
 rsync -Lrtvz  translationproject.org::tp/latest/gnucobol/ . # || exit
 
 # Are there now PO files that are not in svn yet?
-NEWSTUFF=$(svn status | grep "^\? .*.po$")
+NEWSTUFF=$(svn status | grep "^\? .*.po$" | sed -e's/\? *//')
 
 if [ -n "${NEWSTUFF}" ]; then
-    echo "New languages found; updating LINGUAS"
+    echo; echo "New languages found; updating LINGUAS ..."
     echo "# List of available languages." >LINGUAS
     echo $(printf '%s\n' *.po | LC_ALL=C sort | sed 's/\.po//g') >>LINGUAS
+    echo "... and adding new files to svn:"
+    for file in "${NEWSTUFF}"; do svn add $file; done
 fi
 
-echo "Regenerating POT file and remerging and recompiling PO files..."
-make update-po
+echo; echo "Regenerating POT file and remerging and recompiling PO files..."
 
-# Ensure that the PO files are newer than the POT.
-touch *.po
+if test -f Makefile; then
+  make update-po
 
-# Compile PO files
-make
+  # Ensure that the PO files are newer than the POT.
+  touch *.po
+
+  # Compile PO files
+  make
+
+else
+
+  echo; echo "WARNING: no Makefile available!"
+  echo "remerge and compilation of PO files isn't done yet"
+  echo;
+fi
